--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/datosDocumento.tmpl
@@ -22,9 +22,9 @@
 
 var TIENE_NIVEL_2 = 0;
 
-function close_window_esquema(){
+/*function close_window_esquema(){
     $('#datos_esquema').dialog('close');
-}  
+} */ 
 
 //Funcion que se ejecuta cuando se carga la pagina, dependiendo de donde viene ejecuta las funciones correspondientes.
 $(document).ready( function() {
@@ -61,7 +61,7 @@ $(document).ready( function() {
         modificarEjemplaresN3FromRegistro(params.id1);
 	[% END %]
 
-    $('#datos_esquema').hide();
+//     $('#datos_esquema').hide();
     $('#datos_indice').hide()
 
     if(MODIFICAR) {
@@ -95,7 +95,8 @@ $(document).ready( function() {
 </fieldset>
 </div>
 
-<div id="datos_esquema" style="display: none;">
+<!--<div id="datos_esquema" style="display: none;">-->
+<div id="datos_esquema">
 <fieldset>
     <legend class="titulo_legend">[% "Datos del esquema" | i18n %]</legend>
     <ul style="clear:both">
