--- a/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
+++ b/opac/htdocs/opac-tmpl/temas/default/includes/opac.css
@@ -1906,7 +1906,7 @@ p.caption {clear:both;
 
 
 .sanciones_opac_main .main-subcontent h1{
-    background-color: #FE2E2E;
+    background-color: #F15656;
 }
 
 .sanciones_opac_main .subcontent-unit-border{
