--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/ADInfoNivel2.tmpl
@@ -51,9 +51,9 @@
                 [% END %]
                 [% PERL %]
                         print C4::AR::Filtros::to_Icon(   
-                                                            boton   => "icon_edicion",
+                                                            boton   => "icon_indice",
                                                             onClick => "agregarIndice('[% nivel2.getId2 %]');",
-                                                            title   => "[% 'Agregar Indice (CAMBIAR ICONO!!!!!!!!)' | i18n %]",
+                                                            title   => "[% 'Agregar Indice' | i18n %]",
                                                             li => 1,
                                 ) ;
                 [% END %]
