--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -25,6 +25,7 @@
 	<script src="/intranet-tmpl/includes/circulacion-min.js"></script>
 	<script src="/intranet-tmpl/includes/catalogacion-min.js"></script>
 	<script src="/intranet-tmpl/includes/detalleEjemplar.js"></script>
+	<script src="/intranet-tmpl/includes/estantesVirtuales.js"></script>
 
 	<!-- Se incluyen las librerias necesarias para manejar autocomplete -->
 	[% INCLUDE "AutocompleteHelper.inc" %]
@@ -111,7 +112,6 @@
 	                            [% END %]
 	                        [% END %]
 		                
-
 <!--                            <a class="inline" href="#indice_data[% id2 %]">Indice</a>-->
                             <div style="display:none"><div id="indice_data[% id2 %]" style="white-space: pre;" title="[% 'Indice del grupo' | i18n %]">[% indice %]</div></div>
 
@@ -124,6 +124,17 @@
 		                                                ) ;
 		                    [% END %]
 		                </div>
+
+	                        [% IF esta_en_estante_virtual %]
+	                            [% PERL %]
+	                                                print C4::AR::Filtros::to_Icon(  
+	                                                                                    boton   => "icon_estvirtuales",
+	                                                                                    onClick => "mostrarEstantesVirtualesDeGrupo([% id2 %]);",
+	                                                                                    title   => "[% 'Ver estantes virtuales en los que se encuentra' | i18n %]",
+	                                                        ) ;
+	                            [% END %]
+	                        [% END %]
+
 			                <br>
 			                [% IF amazon_cover %]
 				                <div class='amazon_cover_detail' style="position: relative; float:right;">
@@ -151,6 +162,8 @@
                             </ul>
 	                </div>
                 [% INCLUDE  "partials/e-docs_grupo.inc" %]
+		[% INCLUDE  "partials/estantes_grupo.inc" %]
+
 	            </div> <!--Fin <div id="grupo TMPL_VAR NAME='id2'-->
 	        </fieldset>
 	        <script type="text/javascript">makeToggle('grupo[% id2 %]','trigger_3_[% id2 %]',null,false);</script>
